--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>Vanilla JavaScript App Plansmash Media</h1>
   </main>
 </body>
 
